# SiAOD

./: .gitignore
All/dolgs/Aurora/: CMakeLists.txt  main.cpp  zxc.txt
All/dolgs/OOP/4_1_1/: App.cpp  App.h  Base.cpp  Base.h  CMakeLists.txt  Object.cpp  Object.h  main.cpp
All/dolgs/dolg10/: CMakeLists.txt  MyH.h  main.cpp
All/dolgs/dolg2/: CMakeLists.txt  main.cpp
All/dolgs/dolg3/: CMakeLists.txt  main.cpp
All/dolgs/dolg4/: CMakeLists.txt  MyH.h  main.cpp
All/dolgs/dolg5/: CMakeLists.txt  OneWayLists.h  main.cpp
All/dolgs/dolg6/: CMakeLists.txt  MyH.h  main.cpp
All/dolgs/dolg7/: CMakeLists.txt  main.cpp
All/dolgs/dolg8/: B.txt  C.txt  CMakeLists.txt  main.cpp
All/dolgs/dolg9/: CMakeLists.txt  MyH.h  main.cpp
All/pr2/: CMakeLists.txt  MyH.h  bin.txt  bin3.txt  main.cpp  text.txt  text2.txt
All/pr3/: BinaryFiles.h  CMakeLists.txt  HashT.h  HashTable.h  main.cpp  pr3.cpp  pr3.sln  pr3.vcxproj
All/pr3/old/: HashT.h  MyHash.h  pr3.cpp
All/pr4/: CMakeLists.txt  EquationTree.h  Tree.h  pr4.cpp
All/pr5/: AVLTree.h  BinaryFiles.h  BinarySearchTree.h  CMakeLists.txt  HashTable.h  main.cpp
All/pr6/: CMakeLists.txt  Graph.h  main.cpp
